lubuntu-default-settings (1.4) UNRELEASED; urgency=medium

  * Remove /usr/share/applications; these files are native in LXQt.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 20 Jul 2018 01:28:38 -0500

lubuntu-default-settings (1.3) cosmic; urgency=medium

  * In the panel.conf file, turn on autoclearing of the search message; this
    makes it consistent with other desktop environments.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 21 May 2018 00:52:50 -0500

lubuntu-default-settings (1.2) cosmic; urgency=medium

  * Move the contents of /etc/xdg/lubuntu/ to /etc/xdg/xdg-Lubuntu/.
  * Ensure that the Lubuntu session uses our Openbox config.
  * Update runtime dependencies.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 17 May 2018 17:56:31 -0500

lubuntu-default-settings (1.1) cosmic; urgency=high

  * Fix the installation of the xsession file (LP: #1771681).

 -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 16 May 2018 22:01:01 -0500

lubuntu-default-settings (1.0) cosmic; urgency=medium

  * Move obsolete configuration files to another repository, and convert
    Lubuntu Next into Lubuntu. Only LXQt-based Lubuntu settings remain.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 14 May 2018 20:31:28 -0500

lubuntu-default-settings (0.54) bionic; urgency=medium

  * Revert previous upload.
  * debian/lubuntu-default-settings.install & lubuntu-extra-sessions:
   - Move QLubuntu.session to the main package.
   - Move Lubuntu-Netbook to the extra sessions package.
  * debian/control:
   - Add Breaks according to previous upload.
   - Update Breaks for current upload.

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 12 Feb 2018 20:09:01 +0100

lubuntu-default-settings (0.53) bionic; urgency=medium

  * Move some things around:
    - Lubuntu.desktop should be in lubuntu-default-session.
    - QLubuntu.desktop should be in qlubuntu-default-session.
    - Lubuntu-Netbook.desktop should be in lubuntu-extra-sessions.
