@@ -1,6 +1,8 @@
 lubuntu-default-settings (1.4) UNRELEASED; urgency=medium
 
   * Remove /usr/share/applications; these files are native in LXQt.
+  * Don't launch a file manager on Ctrl + Alt + D, because that already
+    shows the desktop in LXQt.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 20 Jul 2018 01:28:38 -0500
 
